# waycarbon-test

./: README.md
post-comments/: .gitignore  Dockerfile  README.html  README.md  run_server.sh  run_tests.sh
post-comments/app/: config.py  db.sqlite
post-comments/app/controllers/comments/: __init__.py  utils.py
post-comments/app/controllers/posts/: utils.py
post-comments/app/errors/: handlers.py
post-comments/app/repositories/: comments.py  models.py  posts.py
post-comments/app/tests/: __init__.py
post-comments/app/tests/controllers/: test_comments.py  test_posts.py
post-comments/app/tests/repositories/: test_posts.py
take-home-test-backend/: pyproject.toml
take-home-test-backend/app/: __init__.py  db.sqlite
take-home-test-backend/app/controllers/comments/: __init__.py  utils.py
take-home-test-backend/app/controllers/posts/: __init__.py  utils.py
take-home-test-backend/app/errors/: __init__.py
take-home-test-backend/app/repositories/: comments.py  models.py
take-home-test-backend/app/tests/controllers/: test_comments.py  test_posts.py
take-home-test-backend/app/tests/repositories/: test_comments.py
take-home-test-backend/scripts/: populate_db.py
